Use the same topic to receive the entire database

--- a/usage-demo/compose/compose.yaml
+++ b/usage-demo/compose/compose.yaml
@@ -246,8 +246,8 @@ services:
       - CANAL_CONF_CANALADAPTERS[0]_INSTANCE=example
       - CANAL_CONF_CANALADAPTERS[0]_GROUPS[0]_GROUPID=g1
       - CANAL_CONF_CANALADAPTERS[0]_GROUPS[0]_OUTERADAPTERS[0]_NAME=logger
-      - CANAL_CONF_CANALADAPTERS[1]_INSTANCE=mytest2_stuff
-      - CANAL_CONF_CANALADAPTERS[1]_GROUPS[0]_GROUPID=mytest2_stuff
+      - CANAL_CONF_CANALADAPTERS[1]_INSTANCE=mytest2
+      - CANAL_CONF_CANALADAPTERS[1]_GROUPS[0]_GROUPID=mytest2
       - CANAL_CONF_CANALADAPTERS[1]_GROUPS[0]_OUTERADAPTERS[0]_NAME=logger
     networks:
       canal:
