--- a/usage-demo/compose/instance.properties
+++ b/usage-demo/compose/instance.properties
@@ -54,7 +54,8 @@ canal.instance.filter.black.regex=
 # mq config
 canal.mq.topic=example
 # dynamic topic route by schema or table regex
-canal.mq.dynamicTopic=mytest1.user,mytest2\\..*,.*\\..*
+# canal.mq.dynamicTopic=mytest1.user,mytest2\\..*,.*\\..*
+canal.mq.dynamicTopic=mytest2
 canal.mq.partition=0
 # hash partition config
 #canal.mq.partitionsNum=3
