mysqld: [ERROR] Found option without preceding group in config file /opt/bitnami/mysql/conf/bitnami/my_custom.cnf at line 1.

--- a/usage-demo/k8s/deployments.yaml
+++ b/usage-demo/k8s/deployments.yaml
@@ -115,6 +115,7 @@ metadata:
     app: canal-demo
 data:
   my_custom.cnf: |
+    [mysqld]
     character_set_server = utf8mb4
     collation_server = utf8mb4_unicode_ci
     default_time_zone = '+08:00'
