--- a/usage-demo/k8s/deployments.yaml
+++ b/usage-demo/k8s/deployments.yaml
@@ -504,13 +504,18 @@ spec:
               name: tcp-11110
             - containerPort: 11111
               name: tcp-11111
+            - containerPort: 11112
+              name: tcp-11112
           livenessProbe:
             failureThreshold: 3
             initialDelaySeconds: 60
             periodSeconds: 10
             successThreshold: 1
-            tcpSocket:
-              port: 11110
+            httpGet:
+              path: /metrics
+              port: 11112
+            # tcpSocket:
+            #   port: 11110
             timeoutSeconds: 5
           volumeMounts:
             - name: canal-config
