--- a/usage-demo/compose/compose.yaml
+++ b/usage-demo/compose/compose.yaml
@@ -126,6 +126,7 @@ services:
           - adminer
   main-db8:
     image: bitnami/mysql:8.0.40-debian-12-r2
+    # image: bitnami/mysql:8.4.3-debian-12-r2
     restart: always
     volumes:
       - main-db8-data:/bitnami/mysql/data
