--- a/usage-demo/k8s/optional-canal-admin.yaml
+++ b/usage-demo/k8s/optional-canal-admin.yaml
@@ -136,6 +136,8 @@ spec:
               value: "admin"
             - name: canal.admin.passwd
               value: "4ACFE3202A5FF5CF467898FC58AAB1D615029441"
+            - name: SERVER_SERVLET_SESSION_TIMEOUT
+              value: 6d
           ports:
             - containerPort: 11110
               name: tcp-11110
