--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -7,6 +7,8 @@ on:
       - 'README.md'
       - 'usage-demo/**'
       - '.gitignore'
+      - '.github/workflows/ci-ver.yml'
+      - '.github/workflows/ci.yml'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
@@ -21,16 +23,16 @@ jobs:
       fail-fast: false
       matrix:
         base_img:
-        - "eclipse-temurin:8u422-b05-jdk-noble"
-        - "eclipse-temurin:17.0.12_7-jdk-noble"
-        - "eclipse-temurin:21.0.4_7-jdk-noble"
-        - "eclipse-temurin:11.0.24_8-jdk-noble"
+        - "eclipse-temurin:8u442-b06-jdk-noble"
+        - "eclipse-temurin:11.0.26_4-jdk-noble"
+        - "eclipse-temurin:17.0.14_7-jdk-noble"
+        - "eclipse-temurin:21.0.6_7-jdk-noble"
         m:
         - "canal-server"
         - "canal-admin"
         - "canal-adapter"
         vers:
-        - "canal-1.1.8-alpha-3"
+        - "canal-1.1.8"
     steps:
       -
         name: Checkout
